suite archi compliqué
